log
Wed 24 Apr 2024 08:22:21 PM UTC: 
 tests:  0|6
total_score: 0/70
1e1015d
Wed 24 Apr 2024 08:26:33 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a5b35b4
Wed 24 Apr 2024 08:33:33 PM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:33: error: expected statement before ‘)’ token
   44 |   if (map->buckets[pos] == NULL)) {
      |                                 ^
hashmap.c:44:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |   if (map->buckets[pos] == NULL)) {
      |   ^~
hashmap.c:44:35: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   44 |   if (map->buckets[pos] == NULL)) {
      |                                   ^
hashmap.c:48:3: error: ‘else’ without a previous ‘if’
   48 |   else{
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
5882051
Wed 24 Apr 2024 08:34:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e158e73
Wed 24 Apr 2024 08:42:24 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
2f7fcc2
Wed 24 Apr 2024 08:54:16 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:35: error: expected statement before ‘)’ token
   78 |   while(map->buckets[pos] != NULL)){
      |                                   ^
hashmap.c:78:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   78 |   while(map->buckets[pos] != NULL)){
      |   ^~~~~
hashmap.c:78:36: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   78 |   while(map->buckets[pos] != NULL)){
      |                                    ^
cc1: all warnings being treated as errors
Compilation failed
2ee1c0e
Wed 24 Apr 2024 08:54:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
8508311
Wed 24 Apr 2024 08:57:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
4742032
Wed 24 Apr 2024 09:06:50 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
  102 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d42cc31
Wed 24 Apr 2024 09:14:08 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 50/70
0e9bc9a
Wed 24 Apr 2024 09:16:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c9e27b0
Wed 24 Apr 2024 09:17:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
21a49e4
Wed 24 Apr 2024 09:17:40 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
7105abe
Wed 24 Apr 2024 09:18:47 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
bd08156
Wed 24 Apr 2024 09:19:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6daa012
Wed 24 Apr 2024 09:20:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
282e31d
Wed 24 Apr 2024 09:23:38 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
de2c3a6
Wed 24 Apr 2024 09:25:08 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2e834c0
Wed 24 Apr 2024 09:26:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3fd601
Wed 24 Apr 2024 09:29:12 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
da80834
Wed 24 Apr 2024 09:33:08 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
531c343
Wed 24 Apr 2024 09:33:26 PM UTC: 
 hashmap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  12|2
total_score: 50/70
17beecf
Wed 24 Apr 2024 09:33:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2be1803
Wed 24 Apr 2024 09:34:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
2cad3d4
Wed 24 Apr 2024 09:34:53 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  12|2
total_score: 50/70
2c1d35a
Wed 24 Apr 2024 09:36:09 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
a35dc6b
Wed 24 Apr 2024 09:36:22 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|2
total_score: 50/70
8e16b7c
Wed 24 Apr 2024 09:39:06 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
b7d9a3e
Wed 24 Apr 2024 09:44:35 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:64:28: error: too few arguments to function ‘calloc’
   64 |   map->buckets = (Pair **) calloc(map->capacity * sizeof(Pair *));
      |                            ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
5fc7a34
Wed 24 Apr 2024 09:45:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
50ad9c4
Wed 24 Apr 2024 09:45:59 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|1
total_score: 60/70
a30f5b4
Wed 24 Apr 2024 09:47:29 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|1
total_score: 60/70
93a97a9
Wed 24 Apr 2024 09:47:50 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  13|1
total_score: 60/70
5b0b2dc
Wed 24 Apr 2024 09:52:25 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
04720b7
Wed 24 Apr 2024 09:53:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
52a5731
Wed 24 Apr 2024 09:54:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
b89a3f7
Wed 24 Apr 2024 10:03:11 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  12|1
total_score: 60/70
49d3bcb
Wed 24 Apr 2024 10:03:34 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|1
total_score: 60/70
42f509c
Wed 24 Apr 2024 10:04:26 PM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  13|1
total_score: 60/70
2170166
Wed 24 Apr 2024 10:09:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
0b6a9bf
Wed 24 Apr 2024 10:10:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
700cc2d
Wed 24 Apr 2024 10:10:57 PM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  17|0
total_score: 70/70
52f233a
